# ocr-workbench

./: .gitignore  README.md  main.py  pyproject.toml  run_ocr_experiments.sh  summarize_memory_consumption.sh
chandra_environment/: pyproject.toml
docint_environment/: config.json  pyproject.toml  run_all_experiments.sh  run_experiment.py
docling_environment/: config.json  pyproject.toml  run_all_experiments.sh  run_experiment.py
docling_experiments/: config.json  docling_ocr_experiment.py  pyproject.toml  run_all_experiments.sh  run_experiment.py  utils.py
lighton_environment/: pyproject.toml  run_experiment.py
marker_environment/: pyproject.toml  run_all_experiments.sh
mineru_environment/: pyproject.toml  run_all_experiments.sh
mineru_experiments/: main.sh  pyproject.toml  run_all_experiments.sh
surya_environment/: pyproject.toml
